@@ -1,5 +1,14 @@
 2000-02-16  Mark Kettenis  <kettenis@gnu.org>
 
+	* target.c (do_target_signal_to_host): Do not use REALTIME_LO in
+	the conversion of the signal number.  TARGET_SIGNAL_REALTIME_33 is
+	33 by definition, whereas REALTIME_LO might be 32 on systems that
+	have SIG32 such as Linux.  Make sure that the signal number
+	returned is within the range specified by REALTIME_LO and
+	REALTIME_HI.
+
+2000-02-16  Mark Kettenis  <kettenis@gnu.org>
+
 	* configure: Regenerated.
 
 2000-02-16  Fernando Nasser  <fnasser@totem.to.cygnus.com>
